CHANGELOG
=========

CLIENT
[7:43PM 7/29/2012]
	- temporarily changed client-side username check to if statement (double ':s')
	- client will reject usernames longer than 16 characters
[6:20PM 7/28/2012]
	- the GUI client now allows users to set name before connecting to a server 
[4:48PM 7/28/2012]
	- began working on disallowed characters in username (client-sided for now :s)
[8:22PM 7/27/2012]
	- renamed 'cg' variable to 'isGUI'
	- console and gui clients now both share the same 'connecting to server' message
[9:12PM 7/26/2012]
	- GUI client will no longer give the console-mode "/logout and /quit" message
	- GUI client can no longer be resized (for the time being, at least)
[4:59 PM 7/25/2012]
	- client will no longer send blank messages

SERVER
[8:58PM 8/4/2012]: v0.4-alpha
	- began implementing authentication system
		* the client has not yet been updated to support this update
		- accounts can be registered with /account register <password>
		- passwords are hashed and stored in data/logins-db/USERNAME.dat
		- users are only required to enter a password if the chosen name is already registered
			- registered accounts cannot be logged into unless given the correct password
		- passwords are hashed and then checked against the stored password hash
			- upon successful login: the user is connected as normal
			- upon unsuccessful login: the user is disconnected from the server and informed to try again
		- an account file is created for 'console' to prevent hacked clients from connecting under that name
	- feedback messages can now be sent to the client who issued a command via sendMessage()
	- reloading permissions now clears the arrays first 
[2:19PM 8/4/2012]: v0.3-alpha
	- changed the way user permissions are handled for commands
		- user rights are checked upon command entry, and then that variable is checked per command
		- command permissions are now numeric-based:
			* Console: 4
			* Administrator: 3
			* Operator: 2
			* Voiced: 1
			* Regular user: 0